# datapact

./: .pre-commit-config.yaml  CHANGELOG.md  README.md  ROADMAP.md  dbx_ntb_setup_example.ipynb  final_verification.py  pyproject.toml  requirements.txt  run_in_notebook.py  test_config.yml  test_datapact.py  validation_config.yml
.github/workflows/: ci.yml
datapact/: __init__.py  client.py  config.py  dashboard_builder.py  job_orchestrator.py  main.py  roi_calculator.py  sql_generator.py  sql_utils.py
datapact/templates/: aggregate_results.sql.j2  aggregation_notebook.py  validation.sql.j2  validation_notebook.py
demo/: demo_config.yml  setup.py  setup.sql
tests/: conftest.py  sql_expected_complex.sql  sql_expected_counts_only.sql  test_aggregate_results_template.py  test_aggregate_results_unit.py  test_cli_entrypoint.py  test_client_coverage.py  test_client_helpers.py  test_client_unit.py  test_client_upload_assets.py  test_config.py  test_config_validators.py  test_dashboard_enhancements.py  test_dashboard_filtering_formatting.py  test_dashboard_query_fixes.py  test_executive_dashboard_fixes.py  test_full_integration.py  test_main_coverage.py  test_metadata_performance_improvements.py  test_sql_edge_cases.py  test_sql_generator_custom.py  test_sql_security.py  test_sql_snapshot.py  test_sql_template_render.py  test_visualization_integration.py
tests/fixtures/: sql_expected_complex.sql  sql_expected_counts_and_nulls_only.sql  sql_expected_counts_only.sql  sql_expected_full.sql
