[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "datapact"
version = "2.0.0"
description = "DataPact: An enterprise grade, programmatic data validation accelerator for Databricks."
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "Skyler Myers", email = "skyler@entrada.ai" },
]
classifiers = [
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Development Status :: 5 - Production/Stable",
]
dependencies = [
    "databricks-sdk>=0.60.0",
    "databricks-sql-connector",
    "pyarrow",
    "pyyaml",
    "loguru",
    "pydantic",
]

[project.urls]
"Homepage" = "https://www.entrada.ai/datapact" # Example URL
"Documentation" = "https://docs.entrada.ai/datapact" # Example URL

[project.scripts]
datapact = "datapact.main:main"

[tool.setuptools.packages.find]
include = ["datapact*"]
